src/test/resources/extension/invalid/trait/noInstanceForDependency.awsl
begin

trait A: SomeTrait is
    A someFunc(A a) is required
end

trait B: SomeMoreTrait where B: SomeTrait is
    B someMoreFunc(B b) is required
end

newtype Some is
    int x;
end

instance Some: SomeMoreTrait is
    Some someMoreFunc(Some a) is
        return a;
    end
end

var s = Some(100);
s = someMoreFunc(s);

end